Fix Policy Marker gap on Mobile

--- a/styles.css
+++ b/styles.css
@@ -638,11 +638,11 @@ button:hover {
   padding: 15rem 0;
 }
 
-.container-title{
+.container-title {
   margin: 15rem;
 }
 
-.contact-image img{
+.contact-image img {
   visibility: visible;
 }
 
@@ -681,14 +681,14 @@ input {
   outline: none;
   border-radius: 15px;
 }
-input::placeholder{
+input::placeholder {
   font-size: 1rem;
 }
 
-textarea::placeholder{
+textarea::placeholder {
   font-size: 1rem;
 }
-input[value=""]{
+input[value=""] {
   font-size: 1rem;
 }
 input[type="submit"] {
@@ -705,36 +705,36 @@ input[type="submit"]:hover {
 }
 
 /* Footer Section */
-#footer{
+#footer {
   background-color: var(--services-section-bg);
   overflow-x: hidden;
 }
 
-footer{
+footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-padding: 2rem 0;
+  padding: 2rem 0;
 }
 
-.attribution{
+.attribution {
   color: var(--links);
   font-size: 1.2rem;
   /* letter-spacing: .1rem; */
   font-weight: lighter;
 }
 
-.copyright{
+.copyright {
   color: var(--links);
 }
 
-.policy-marker{
+.policy-marker {
   display: flex;
   align-items: center;
-  gap:2.5rem;
+  gap: 2.5rem;
 }
 
-.policy-marker a:hover{
+.policy-marker a:hover {
   color: #5a6472;
 }
 
@@ -1052,36 +1052,50 @@ padding: 2rem 0;
     margin-bottom: 1rem;
   }
 
-/* Contact Styling */
+  /* Contact Styling */
 
-#contact{
-  padding: 6rem 0;
-}
+  #contact {
+    padding: 6rem 0;
+  }
 
-.form-container{
-  flex-direction: column;
-  gap: 0;
-}
-.contact-title{
-  font-size: 2rem;
-}
-input{
-  width: 90vw;
-}
+  .form-container {
+    flex-direction: column;
+    gap: 0;
+  }
+  .contact-title {
+    font-size: 2rem;
+  }
+  input {
+    width: 90vw;
+  }
 
-input::placeholder{
-  text-align: center;
-}
+  input::placeholder {
+    text-align: center;
+  }
 
-textarea{
-  width: 90vw;
-}
+  textarea {
+    width: 90vw;
+  }
 
-textarea::placeholder{
-  text-align: center;
-}
+  textarea::placeholder {
+    text-align: center;
+  }
 
-.contact-image img{
-  display: none;
-}
+  .contact-image img {
+    display: none;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+    gap: 1rem;
+  }
+
+  .policy-marker {
+    display: flex;
+    justify-content: center;
+    gap: 1.2rem
+  }
 }
